2025-12-10  G. Branden Robinson <g.branden.robinson@gmail.com>

	* src/roff/troff/input.cpp (read_input_until_terminator): Fix
	apparent memory leak.  The heap-allocated memory we allocate to
	back the local `buf` was not being freed on an error path out of
	the function.

2025-12-08  G. Branden Robinson <g.branden.robinson@gmail.com>

	* src/roff/troff/input.cpp: Trivially refactor.  Rename
	`do_get_long_name()` to `read_input_until_terminator()` because
	{A} that's more descriptive of its function, and {B} it's used
	for more than just reading "long names" (GNU troff-style
	identifiers); in fact 4 out of its 5 call sites read things that
	aren't identifiers.
	(do_get_long_name): Rename declaration and definition from
	this...
	(read_input_until_terminator): ...to this.
	(read_rgb, read_cmy, read_cmyk, read_gray, do_get_long_name):
	Update call sites.

2025-12-08  G. Branden Robinson <g.branden.robinson@gmail.com>

	* src/roff/troff/input.cpp: Migrate more input character reading
	functions to deal in the type `unsigned char` rather than
	`char`.
	(do_get_long_name): Update declaration.
	(read_rgb, read_cmy, read_cmyk, read_gray, do_get_long_name):
	Update definitions.
	(get_long_name): Update `do_get_long_name()` call site to use
	literal of `unsigned char` rathern than `char` type.
	(do_get_long_name): Change type of local variable `buf` from
	`char` to `unsigned char`, since it is directly populated by
	reads of bytes from the input stream.  This function converts
	said input into an object of the groff class `symbol` and
	returns it, but `symbol` has no constructor accepting a pointer
	to `const unsigned char`.  Consequently, once we have
	successfuly populated `buf`, create a new buffer `chbuf`, a
	heap-allocated array of `char` type.  Free this array after
	constructing a `symbol` on the stack.  (If all this seems like
	rigmarole, consider that it's going to be necessary anyway when
	we read bytes from the input stream, confirm that they're valid