@@ -1,3 +1,12 @@
+2025-12-17  G. Branden Robinson <g.branden.robinson@gmail.com>
+
+	* doc/groff.texi.in (Other Differences):
+	* man/groff_diff.7.man (Other differences): Document difference
+	in timing of output flushes between AT&T and GNU troffs.
+
+	Fixes <https://savannah.gnu.org/bugs/?67380>.  Thanks to Dave
+	Kemper for the discussion.
+
 2025-12-10  G. Branden Robinson <g.branden.robinson@gmail.com>
 
 	* src/roff/troff/input.cpp (read_input_until_terminator): Fix
